Fixed behavior of the loader, the loader should be aligned properly

--- a/dev/public/stylesheets/demo.css
+++ b/dev/public/stylesheets/demo.css
@@ -170,13 +170,6 @@ text.time {
     background: green;
 }
 
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 70px;
-    width: 100%;
-}
-
 .list-group-item {
     border:none;
 }
@@ -193,10 +186,15 @@ text.time {
     width: 225px;
 }
 
-.loading-state {
+.main {
+    width:100%;
+    height: 100%;
+}
+.loading-row {
+    height: 100%;
+}
 
-    width: 100%;
-    height: 20%;
+.loading-state {
     text-align: center;
     font-size: 14pt;
 }
